--- a/01himedia/index.html
+++ b/01himedia/index.html
@@ -26,8 +26,13 @@
                 </nav>
             </div>
         </div>
-        <div class="logoWrap">      <!-- 980px m 0 auto -->
+        <div class="logoWrap clearfix">      <!-- 980px m 0 auto -->
             <h1><a href="#">하이미디어</a></h1>
+            <div class="toggle">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </div>
         <div class="navWrap">
             <nav class="gnb">
@@ -156,7 +161,7 @@
     <!-- sention2st end -->
 
     <!-- sention3st start -->
-    <section class="sec3st">
+    <section class="sec3st" style="display: none;">
         <ul class="clearfix">
             <li>
                 <div class="txt">
