--- a/01himedia/index.html
+++ b/01himedia/index.html
@@ -104,25 +104,37 @@
     <!-- section start -->
     <section class="content">
         <ul class="clearfix">
-            <li>
+            <li class="mb16">
                 <img src="images/content_img03.png" alt="content1">
                 <div class="txt">
-                    <h3>환경경영</h3>
+                    <h3 class="mb5">환경경영</h3>
                     <p>Lorem ipsum dolor, sit amet <br> consectetur adipisicing elit.</p>
                 </div>
+                <div class="circle cir">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                </div>
             </li>
-            <li>
+            <li class="mb16">
                 <img src="images/content_img02.png" alt="content2">
                 <div class="txt">
-                    <h3>사업분야</h3>
+                    <h3 class="mb5">사업분야</h3>
                     <p>Lorem ipsum dolor, sit amet <br> consectetur adipisicing elit.</p>
                 </div>
+                <div class="circle cir">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                </div>
             </li>
-            <li>
+            <li class="mb16">
                 <img src="images/content_img01.png" alt="content3">
                 <div class="txt">
-                    <h3>환경경영</h3>
+                    <h3 class="mb5">환경경영</h3>
                     <p>Lorem ipsum dolor, sit amet <br> consectetur adipisicing elit.</p>
+                </div>
+                <div class="circle cir">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
                 </div>
             </li>
         </ul>
