--- a/01himedia/index.html
+++ b/01himedia/index.html
@@ -147,7 +147,7 @@
             <li>
                 <img src="images/content_icon01.png" alt="icon1">
                 <div class="txt">
-                    <h3>환경경영</h3>
+                    <h3>사보</h3>
                     <p>풍부한 경험과 최고의 기술력으로 새로운 미래를 열어갑니다.</p>
                     <a href="#">자세히보기 →</a>
                 </div>
@@ -155,7 +155,7 @@
             <li>
                 <img src="images/content_icon02.png" alt="icon2">
                 <div class="txt">
-                    <h3>환경경영</h3>
+                    <h3>찾아오시는 길</h3>
                     <p>풍부한 경험과 최고의 기술력으로 새로운 미래를 열어갑니다.</p>
                     <a href="#">자세히보기 →</a>
                 </div>
@@ -163,7 +163,15 @@
             <li>
                 <img src="images/content_icon03.png" alt="icon3">
                 <div class="txt">
-                    <h3>환경경영</h3>
+                    <h3>제품정보</h3>
+                    <p>풍부한 경험과 최고의 기술력으로 새로운 미래를 열어갑니다.</p>
+                    <a href="#">자세히보기 →</a>
+                </div>
+            </li>
+            <li>
+                <img src="images/content_icon03.png" alt="icon3">
+                <div class="txt">
+                    <h3>제품정보</h3>
                     <p>풍부한 경험과 최고의 기술력으로 새로운 미래를 열어갑니다.</p>
                     <a href="#">자세히보기 →</a>
                 </div>
@@ -220,11 +228,11 @@
         </div>
         <div class="footerB clearfix">
             <h3>하이미디어</h3>
-            <p>하이미디어 <br>
+            <address>하이미디어 <br>
                 대표 : 홍길동 사업자등록번호 : 000-00-00000 주소 : 서울시 영등포구 여의도동 1234567 <br>
                 TEL : 02-0000-0000 FAX : 02-0000-0000 E-mail : abcde@abcde.com <br>
                 Copyright(c)2015. himedia. All right reserved.
-            </p>
+            </address>
         </div>
     </footer>
     <!-- footer end -->
