--- a/02netmarble/index.html
+++ b/02netmarble/index.html
@@ -41,42 +41,115 @@
     <!-- banner start -->
     <div class="bannerWrap">
         <ul class="banner">
-            <li>
+            <li class="slideLi">
                 <img src="./images/slider1.jpg" alt="">
-                <div class="bannertxt">
-                    <h1>게임소통교육</h1>
-                    <h3>게임으로 소통하고 게임으로 가까워지는 가족</h3>
+                <div class="slideBox">
+                    <div class="bannertxt">
+                        <h1>게임소통교육</h1>
+                        <h3>게임으로 소통하고 게임으로 가까워지는 가족</h3>
+                        <div class="bar"></div>
+                        <div class="consol">
+                            <ul class="page clearfix">
+                                <li>1</li>
+                                <li>/</li>
+                                <li>5</li>
+                            </ul>
+                            <p>게임소통교육</p>
+                            <ul class="btn clearfix">
+                                <li><img src="images/btn_prev.png" alt=""></li>
+                                <li><img src="images/btn_next.png" alt=""></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                 </div>
             </li>
-            <li>
+            <li class="slideLi">
                 <img src="./images/slider2.jpg" alt="">
-                <div class="bannertxt">
-                    <h1>전국장애학생<br>e페스티벌</h1>
-                    <h3>게임 안에서 하나 되는 모두의 축제</h3>
+                <div class="slideBox">
+                    <div class="bannertxt">
+                        <h1>전국장애학생<br>e페스티벌</h1>
+                        <h3>게임 안에서 하나 되는 모두의 축제</h3>
+                    </div>
                 </div>
             </li>
-            <li>
+            <li class="slideLi">
                 <img src="./images/slider3.jpg" alt="">
-                <div class="bannertxt">
-                    <h1>견학프로그램</h1>
-                    <h3>나의 게임 산업 탐방기</h3>
+                <div class="slideBox">
+                    <div class="bannertxt">
+                        <h1>견학프로그램</h1>
+                        <h3>나의 게임 산업 탐방기</h3>
+                    </div>
                 </div>
             </li>
-            <li>
+            <li class="slideLi">
                 <img src="./images/slider4.jpg" alt="">
-                <div class="bannertxt">
-                    <h1>게임아카데미</h1>
-                    <h3>미래의 꿈 게임에 담다</h3>
+                <div class="slideBox">
+                    <div class="bannertxt">
+                        <h1>게임아카데미</h1>
+                        <h3>미래의 꿈 게임에 담다</h3>
+                    </div>
                 </div>
             </li>
-            <li>
+            <li class="slideLi">
                 <img src="./images/slider5.jpg" alt="">
-                <div class="bannertxt">
-                    <h1>어깨동무문고</h1>
-                    <h3>다름을 이해하는 모두의 동화</h3>
+                <div class="slideBox">
+                    <div class="bannertxt">
+                        <h1>어깨동무문고</h1>
+                        <h3>다름을 이해하는 모두의 동화</h3>
+                    </div>
                 </div>
             </li>
         </ul>
     </div>
+
+    <!-- section start -->
+    <!-- section 1 -->
+    <section id="section1">
+        <div class="sectionWrap">
+            <div class="sectionU clearfix">
+                <h3>문화를 만들고 인재를 키우고<br>마음을 나눕니다</h3>
+                <p>넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자
+                    <br>다양한 공익 활동을 전개해 나가고 있습니다. </p>
+            </div>
+            <div class="sectionM">
+                <ul class="clearfix">
+                    <li>
+                        <img src="images/content1.jpg" alt="card1">
+                        <div class="txt">
+                            <div class="txtU f21 fwb">
+                                <h4>문화만들기</h4>
+                                <img src="images/more.png" alt="">
+                            </div>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
+                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/content2.jpg" alt="card2">
+                        <div class="txt">
+                            <div class="txtU">
+                                <h4>인재키우기</h4>
+                                <img src="images/more.png" alt="more">
+                            </div>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
+                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 가기 위해 다양한 활동을 전개하고 있습니다.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/content3.jpg" alt="card3">
+                        <div class="txt">
+                            <div class="txtU">
+                                <h4>마음나누기</h4>
+                                <img src="images/more.png" alt="more">
+                            </div>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
+                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 가기 위해 다양한 활동을 전개하고 있습니다.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
