--- a/02한국대학교/index.html
+++ b/02한국대학교/index.html
@@ -25,13 +25,8 @@
                     <ul class="clearfix">
                         <li><a href="#">글자크기</a></li>
                         <li class="box"><a href="#">
-                            <div class="minor">
-                                <div class="bar"></div>
-                            </div>
-                            <div class="plus">
-                                <div class="bar1"></div>
-                                <div class="bar2"></div>
-                            </div>
+                            <p class="minor">-</p>
+                            <p class="plus">+</p>
                         </a></li>
                         <li><a href="#">찾아오시는길</a></li>
                         <li><a href="#">ENGLISH</a></li>
