--- a/02college/index.html
+++ b/02college/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>한국대학교</title>
+    <link rel="stylesheet" href="../css/jquery.bxslider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery.bxslider.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            var myslide = $('.slider1').bxSlider({controls:false,})
+
+            $('.nextBtn').click(function(){
+                myslide.goToNextSlide();
+            });
+            $('.prevBtn').click(function(){
+                myslide.goToPrevSlide();
+            });
+        });
+    </script>
 </head>
 <body>
     <!-- header start -->
@@ -54,5 +71,100 @@
         </div>
     </header>
     <!-- header end -->
+
+    <!-- content start -->
+    <div id="content">
+         <div class="content1 clearfix">
+             <div class="con_txt">
+                 <h2>함께 나누며 세상을 이끌어</h2>
+                 <h1>세계로 향하는 한국대학교</h1>
+             </div>
+             <ul class="con_icon clearfix">
+                <li>
+                    <div class="icon"></div>
+                    <p>입학절차안내</p>
+                </a></li>
+                <li>
+                    <div class="icon"></div>
+                    <p>입학설명회</p>
+                </a></li>
+                <li>
+                    <div class="icon"></div>
+                    <p>장학제도</p>
+                </a></li>
+                <li>
+                    <div class="icon"></div>
+                    <p>증명서발급</p>
+                </a></li>
+             </ul>
+         </div>
+         <div class="content2">
+             <ul>
+                 <li class="conBox1">
+                    <ul class="slider1">
+                        <li>
+                            <img src="images/bg02.png" alt="">
+                            <div class="conB_txt">
+                                <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
+                                <div class="btn">
+                                    <p>자세히보기</p>
+                                    <img src="images/Polygon 2.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/bg02.png" alt="">
+                            <div class="conB_txt">
+                                <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
+                                <div class="btn">
+                                    <p>자세히보기</p>
+                                    <img src="images/Polygon 2.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/bg02.png" alt="">
+                            <div class="conB_txt">
+                                <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
+                                <div class="btn">
+                                    <p>자세히보기</p>
+                                    <img src="images/Polygon 2.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/bg02.png" alt="">
+                            <div class="conB_txt">
+                                <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
+                                <div class="btn">
+                                    <p>자세히보기</p>
+                                    <img src="images/Polygon 2.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="nextBtn">
+                        <img src="images/btn_right.png" alt="">
+                    </div>
+                    <div class="prevBtn">
+                        <img src="images/btn_left.png" alt="">
+                    </div>
+                 </li>
+                 <li class="conBox2">
+                     <div class="conB_txt2">
+                         <h2><b>APP</b>으로 <br> <b>스마트 도서관</b> <br> 바로이용하자<i>!</i></h2>
+                         <h4>모바일 열람증은 <br> 도서관 자료실 / 도서대출 등에 <br> 사용 할 수 있습니다.</p>
+                     </div>
+                 </li>
+                 <li class="conBox3"></li>
+                 <li class="conBox4"></li>
+                 <li class="conBox5"></li>
+                 <li class="conBox6"></li>
+                 <li class="conBox7"></li>
+                 <li class="conBox8"></li>
+             </ul>
+         </div>
+    </div>
+    <!-- content end -->
 </body>
 </html>
