--- a/02college/index.html
+++ b/02college/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>한국대학교</title>
-    <link rel="stylesheet" href="../css/jquery.bxslider.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/jquery.bxslider.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
 
     <script>
         $(document).ready(function(){
@@ -25,6 +25,7 @@
             $('.prevBtn').click(function(){
                 myslide.goToPrevSlide();
             });
+            $('.slider2').bxSlider()
         });
     </script>
 </head>
@@ -32,24 +33,19 @@
     <!-- header start -->
     <header id="header">
         <div class="headerWrap">
-            <div class="header1">
+            <div class="header1 clearfix">
                 <ul class="headerTab clearfix">
-                    <li><a href="#">대학교</a></li>
+                    <li><a href="#" class="active">대학교</a></li>
                     <li><a href="#">입학안내</a></li>
                     <li><a href="#">대학원</a></li>
                 </ul>
-                <div class="util">
-                    <ul class="clearfix">
-                        <li><a href="#">글자크기</a></li>
-                        <li class="box"><a href="#">
-                            <p class="minor">-</p>
-                            <p class="plus">+</p>
-                        </a></li>
-                        <li><a href="#">찾아오시는길</a></li>
-                        <li><a href="#">ENGLISH</a></li>
-                        <li><a href="#">사이트맵</a></li>
-                    </ul>
-                </div>
+                <ul class="util clearfix">
+                    <li><a href="#">글자크기</a></li>
+                    <li class="add clearfix"><a href="#">+</a><a href="#">-</a></li>
+                    <li><a href="#">찾아오시는길</a></li>
+                    <li><a href="#">ENGLISH</a></li>
+                    <li><a href="#">사이트맵</a></li>
+                </ul>
             </div>
         </div>
         <div class="header2">
@@ -98,12 +94,12 @@
                 </a></li>
              </ul>
          </div>
-         <div class="content2">
+         <div class="content2 clearfix">
              <ul>
                  <li class="conBox1">
                     <ul class="slider1">
                         <li>
-                            <img src="images/bg02.png" alt="">
+                            <img src="images/bg01.png" alt="">
                             <div class="conB_txt">
                                 <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
                                 <div class="btn">
@@ -123,7 +119,7 @@
                             </div>
                         </li>
                         <li>
-                            <img src="images/bg02.png" alt="">
+                            <img src="images/bg03.png" alt="">
                             <div class="conB_txt">
                                 <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
                                 <div class="btn">
@@ -133,7 +129,7 @@
                             </div>
                         </li>
                         <li>
-                            <img src="images/bg02.png" alt="">
+                            <img src="images/bg04.png" alt="">
                             <div class="conB_txt">
                                 <h1><b>한국</b>에서 <br> <b>시작</b>하는 <br> 새로운 <b>꿈</b></h1>
                                 <div class="btn">
@@ -151,9 +147,13 @@
                     </div>
                  </li>
                  <li class="conBox2">
-                     <div class="conB_txt2">
+                     <div class="conB_txt2 clearfix">
                          <h2><b>APP</b>으로 <br> <b>스마트 도서관</b> <br> 바로이용하자<i>!</i></h2>
-                         <h4>모바일 열람증은 <br> 도서관 자료실 / 도서대출 등에 <br> 사용 할 수 있습니다.</p>
+                         <h4>모바일 열람증은 <br> 도서관 자료실 / 도서대출 등에 <br> 사용 할 수 있습니다.</h4>
+                         <div class="txt2_btn">
+                             <p>자세히보기</p>
+                             <img src="images/Polygon 2.png" alt="">
+                         </div>
                      </div>
                  </li>
                  <li class="conBox3"></li>
@@ -161,7 +161,14 @@
                  <li class="conBox5"></li>
                  <li class="conBox6"></li>
                  <li class="conBox7"></li>
-                 <li class="conBox8"></li>
+                 <li class="conBox8">
+                     <ul class="slider2">
+                         <li><img src="images/slide01_1.png" alt=""></li>
+                         <li><img src="images/slide01_2.png" alt=""></li>
+                         <li><img src="images/slide01_3.png" alt=""></li>
+                         <li><img src="images/slide01_4.png" alt=""></li>
+                     </ul>
+                 </li>
              </ul>
          </div>
     </div>
