--- a/02college/index.html
+++ b/02college/index.html
@@ -305,19 +305,19 @@
              <div class="bar"></div>
              <div class="right">
                  <p>2016 - 1학기 성적 열람 및 상담 신청</p>
-                 <ul class="slider3">
+                 <!-- <ul class="slider3">
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
-                 </ul>
-                 <div class="ud_btn">
+                 </ul> -->
+                 <!-- <div class="ud_btn">
                      <div class="upBtn">
                          <img src="images/up.png" alt="">
                      </div>
                      <div class="downBtn">
                          <img src="images/down.png" alt="">
                      </div>
-                 </div>
+                 </div> -->
             </div>
          </div>
     </div>
