--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>netmarble</title>
     <link rel="stylesheet" href="css/jquery.bxslider.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -18,6 +21,14 @@
                 pager:false,
                 controls:false,
                 // auto:true
+            })
+            $('.section_card').bxSlider({
+                controls:false,
+                maxSlides: 3,
+                moveSlides:1,
+                slideWidth:360,
+                slideMargin:32,
+                pager:false,
             })
         })
     </script>
@@ -122,7 +133,8 @@
                                 <img src="images/more.png" alt="">
                             </div>
                             <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
-                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.
+                            </p>
                         </div>
                     </li>
                     <li>
@@ -132,8 +144,8 @@
                                 <h4>인재키우기</h4>
                                 <img src="images/more.png" alt="more">
                             </div>
-                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
-                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 가기 위해 다양한 활동을 전개하고 있습니다.</p>
+                            <p>미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고<br>
+                                체계적인 성장 기회를 지원합니다.</p>
                         </div>
                     </li>
                     <li>
@@ -143,13 +155,126 @@
                                 <h4>마음나누기</h4>
                                 <img src="images/more.png" alt="more">
                             </div>
-                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>
-                                즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 가기 위해 다양한 활동을 전개하고 있습니다.</p>
+                            <p>나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는<br>
+                                기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</p>
                         </div>
                     </li>
                 </ul>
             </div>
+            <div class="sectionD">
+                <div class="conbox">
+                    <div class="txt2">
+                        <h3>
+                            우리는 <b>문화적 가치를 확산</b>하여 우리 사회의<br>미래 경쟁력을 높여갑니다
+                        </h3>
+                        <p>주요목적</p>
+                    </div>
+                    <img src="images/purpose.e6f7b36.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
+    <section id="section2">
+        <div class="section2Wrap">
+            <div class="section2_title">
+                <h3>재단소식</h3>
+                <div class="tap">
+                    <button classstyle>공지사항</button>
+                    <button class style>뉴스룸</button>
+                    <button class style>소셜미디어</button>
+                </div>
+            </div>
+            <ul class="section_card">
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>넷마블게임아카데미 5주년 기념<br>책자 및 영상</h4>
+                        <h6>미래 게임 인재 양성을 목표로, 2016년부터 게임<br>
+                            개발 교육을 지원하고 있는<br>
+                            '넷마블게임아카데미'가 5주년을 맞이하여 기념<br>
+                            책자와 영상을 제작했습니다. 기념 책자 <...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.07.22</p>
+                </li>
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>2021년 넷마블게임아카데미<br>부트캠프 1기 참여 청소년 모집</h4>
+                        <h6>2021년 넷마블게임아카데미 부트캠프 1기 참여<br>
+                            청소년 모집 넷마블게임아카데미 5주년을<br>
+                            기념하여 게임 인재에 대한 확고한 꿈과 게임 개발<br>
+                            경험 및 관련 역량이 풍부한 청소년을 대상으로...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.07.05</p>
+                </li>
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>2021 넷마블 온라인게임소통교육<br>참가 가족 모집</h4>
+                        <h6>안녕하세요. 넷마블문화재단입니다. 게임에 대한<br>
+                            부모와 자녀 간의 견해 차이를 좁히고, 교육 및<br>
+                            놀이의 도구로서 게임이 가지고 있는 순기능을<br>
+                            전파하고자 진행되는 2021 게임소통교육 신청...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.07.01</p>
+                </li>
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>2021 게임문화체험관 환경개선<br>기관 공모 최종 결과 안내</h4>
+                        <h6>2021 게임문화체험관 환경개선 기관 공모에<br>
+                            신청해 주신 모든 학교 및 기관에 감사드리며 내부<br>
+                            평가 기준에 따라 최종선정기관을 공지합니다. -<br>
+                            최종선정기관 : 대구서부특수교육지원센터...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.06.18</p>
+                </li>
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>넷마블문화재단 박물관 학예사<br>(계약직) 채용공고</h4>
+                        <h6>넷마블문화재단에서 아래와 같이 학예사<br>
+                            (큐레이터)를 모집합니다. 많은 분들의 지원<br>
+                            바랍니다. 1. 직무 - 학예사(큐레이터) 2. 담당업무<br>
+                            (직무내용) - 박물관 승인/등록 관련 학예 및 행정...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.06.17</p>
+                </li>
+                <li class="card_swiper">
+                    <div class="txtbox">
+                        <h4>2021 게임문화체험관 환경개선<br>기관 모집</h4>
+                        <h6>2021 게임문화체험관 환경개선 기관 모집<br>
+                            넷마블문화재단에서는 기존 게임문화체험관의<br>
+                            노후화 개선 및 운영 활성화를 위해 노후 기기 교체,<br>
+                            인테리어 개선을 지원하는 게임문화체험관 환경...
+                        </h6>
+                    </div>
+                    <p>공지사항 ⦁ 2021.05.06</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="footerWrap">
+            <div class="footer_logo">
+                <img src="images/logo_footer.png" alt="">
+            </div>
+            <p>
+                서울특별시 구로구 디지털로26길 38, G-Tower 넷마블
+                <br>Copyright © Netmarble Corp. All Rights Reserved.
+            </p>
+            <ul>
+                <li>개인정보처리방침</li>
+                <li>SNS 저작물 이용 동의서</li>
+                <li>이메일 문의</li>
+                <li>주무관청</li>
+            </ul>
+            <div class="sns">
+                <img src="images/sns1.png" alt="">
+                <img src="images/sns2.png" alt="">
+                <img src="images/sns3.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
