--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -81,6 +81,19 @@
                     <div class="bannertxt">
                         <h1>전국장애학생<br>e페스티벌</h1>
                         <h3>게임 안에서 하나 되는 모두의 축제</h3>
+                        <div class="bar"></div>
+                        <div class="consol">
+                            <ul class="page clearfix">
+                                <li>1</li>
+                                <li>/</li>
+                                <li>5</li>
+                            </ul>
+                            <p>전국 장애학생 e페스티벌</p>
+                            <ul class="btn clearfix">
+                                <li><img src="images/btn_prev.png" alt=""></li>
+                                <li><img src="images/btn_next.png" alt=""></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </li>
@@ -90,6 +103,19 @@
                     <div class="bannertxt">
                         <h1>견학프로그램</h1>
                         <h3>나의 게임 산업 탐방기</h3>
+                        <div class="bar"></div>
+                        <div class="consol">
+                            <ul class="page clearfix">
+                                <li>1</li>
+                                <li>/</li>
+                                <li>5</li>
+                            </ul>
+                            <p>견학프로그램</p>
+                            <ul class="btn clearfix">
+                                <li><img src="images/btn_prev.png" alt=""></li>
+                                <li><img src="images/btn_next.png" alt=""></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </li>
@@ -99,6 +125,19 @@
                     <div class="bannertxt">
                         <h1>게임아카데미</h1>
                         <h3>미래의 꿈 게임에 담다</h3>
+                        <div class="bar"></div>
+                        <div class="consol">
+                            <ul class="page clearfix">
+                                <li>1</li>
+                                <li>/</li>
+                                <li>5</li>
+                            </ul>
+                            <p>게임아카데미</p>
+                            <ul class="btn clearfix">
+                                <li><img src="images/btn_prev.png" alt=""></li>
+                                <li><img src="images/btn_next.png" alt=""></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </li>
@@ -108,6 +147,19 @@
                     <div class="bannertxt">
                         <h1>어깨동무문고</h1>
                         <h3>다름을 이해하는 모두의 동화</h3>
+                        <div class="bar"></div>
+                        <div class="consol">
+                            <ul class="page clearfix">
+                                <li>1</li>
+                                <li>/</li>
+                                <li>5</li>
+                            </ul>
+                            <p>어깨동무문고</p>
+                            <ul class="btn clearfix">
+                                <li><img src="images/btn_prev.png" alt=""></li>
+                                <li><img src="images/btn_next.png" alt=""></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </li>
@@ -179,9 +231,9 @@
             <div class="section2_title">
                 <h3>재단소식</h3>
                 <div class="tap">
-                    <button classstyle>공지사항</button>
-                    <button class style>뉴스룸</button>
-                    <button class style>소셜미디어</button>
+                    <button class="#">공지사항</button>
+                    <button class="#">뉴스룸</button>
+                    <button class="#">소셜미디어</button>
                 </div>
             </div>
             <ul class="section_card">
@@ -263,7 +315,7 @@
                 서울특별시 구로구 디지털로26길 38, G-Tower 넷마블
                 <br>Copyright © Netmarble Corp. All Rights Reserved.
             </p>
-            <ul>
+            <ul class="clearfix">
                 <li>개인정보처리방침</li>
                 <li>SNS 저작물 이용 동의서</li>
                 <li>이메일 문의</li>
@@ -273,6 +325,9 @@
                 <img src="images/sns1.png" alt="">
                 <img src="images/sns2.png" alt="">
                 <img src="images/sns3.png" alt="">
+            </div>
+            <div class="familysite">
+                <button>Family Site</button>
             </div>
         </div>
     </footer>
