--- a/02college/index.html
+++ b/02college/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>한국대학교</title>
     <link rel="stylesheet" href="css/jquery.bxslider.css">
+    <link rel="stylesheet" href="css/colorbox.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@300;500;700&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
+    <script src="js/jquery.colorbox-min.js"></script>
 
     <script>
         $(document).ready(function(){
@@ -33,6 +35,11 @@
                 mode:"vertical",
                 controls:false,
                 pager:false,
+            })
+            $(".play").colorbox({
+                iframe:true,
+                innerWidth:700,
+                innerHeight:394,
             })
         });
     </script>
@@ -247,7 +254,7 @@
                      </div>
                  </li>
                  <li class="conBox7">
-                     <img src="images/play.png" alt="">
+                     <a href="https://www.youtube.com/embed/IbkMucN6Ppg" class="play"><img src="images/play.png" alt=""></a>
                  </li>
                  <li class="conBox8">
                      <ul class="slider2">
@@ -303,21 +310,21 @@
                     </li>
              </ul>
              <div class="bar"></div>
-             <div class="right">
+             <div class="right clearfix">
                  <p>2016 - 1학기 성적 열람 및 상담 신청</p>
-                 <!-- <ul class="slider3">
+                 <ul class="slider3">
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
                      <li class="list">성적열람 및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
-                 </ul> -->
-                 <!-- <div class="ud_btn">
+                 </ul>
+                 <div class="ud_btn">
                      <div class="upBtn">
                          <img src="images/up.png" alt="">
                      </div>
                      <div class="downBtn">
                          <img src="images/down.png" alt="">
                      </div>
-                 </div> -->
+                 </div>
             </div>
          </div>
     </div>
