--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -56,7 +56,7 @@
                 <img src="./images/slider1.jpg" alt="">
                 <div class="slideBox">
                     <div class="bannertxt">
-                        <h1>게임소통교육</h1>
+                        <h1><br>게임소통교육</h1>
                         <h3>게임으로 소통하고 게임으로 가까워지는 가족</h3>
                         <div class="bar"></div>
                         <div class="consol">
@@ -84,7 +84,7 @@
                         <div class="bar"></div>
                         <div class="consol">
                             <ul class="page clearfix">
-                                <li>1</li>
+                                <li>2</li>
                                 <li>/</li>
                                 <li>5</li>
                             </ul>
@@ -101,12 +101,12 @@
                 <img src="./images/slider3.jpg" alt="">
                 <div class="slideBox">
                     <div class="bannertxt">
-                        <h1>견학프로그램</h1>
+                        <h1><br>견학프로그램</h1>
                         <h3>나의 게임 산업 탐방기</h3>
                         <div class="bar"></div>
                         <div class="consol">
                             <ul class="page clearfix">
-                                <li>1</li>
+                                <li>3</li>
                                 <li>/</li>
                                 <li>5</li>
                             </ul>
@@ -123,12 +123,12 @@
                 <img src="./images/slider4.jpg" alt="">
                 <div class="slideBox">
                     <div class="bannertxt">
-                        <h1>게임아카데미</h1>
+                        <h1><br>게임아카데미</h1>
                         <h3>미래의 꿈 게임에 담다</h3>
                         <div class="bar"></div>
                         <div class="consol">
                             <ul class="page clearfix">
-                                <li>1</li>
+                                <li>4</li>
                                 <li>/</li>
                                 <li>5</li>
                             </ul>
@@ -145,12 +145,12 @@
                 <img src="./images/slider5.jpg" alt="">
                 <div class="slideBox">
                     <div class="bannertxt">
-                        <h1>어깨동무문고</h1>
+                        <h1><br>어깨동무문고</h1>
                         <h3>다름을 이해하는 모두의 동화</h3>
                         <div class="bar"></div>
                         <div class="consol">
                             <ul class="page clearfix">
-                                <li>1</li>
+                                <li>5</li>
                                 <li>/</li>
                                 <li>5</li>
                             </ul>
