--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -20,7 +20,7 @@
             $('.banner').bxSlider({
                 pager:false,
                 controls:false,
-                // auto:true
+                auto:true
             })
             $('.section_card').bxSlider({
                 controls:false,
@@ -178,7 +178,7 @@
             <div class="sectionM">
                 <ul class="clearfix">
                     <li>
-                        <img src="images/content1.jpg" alt="card1">
+                        <img src="images/content1.jpg" alt="card1" class="con">
                         <div class="txt">
                             <div class="txtU f21 fwb">
                                 <h4>문화만들기</h4>
@@ -190,7 +190,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/content2.jpg" alt="card2">
+                        <img src="images/content2.jpg" alt="card2" class="con">
                         <div class="txt">
                             <div class="txtU">
                                 <h4>인재키우기</h4>
@@ -201,7 +201,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/content3.jpg" alt="card3">
+                        <img src="images/content3.jpg" alt="card3" class="con">
                         <div class="txt">
                             <div class="txtU">
                                 <h4>마음나누기</h4>
