--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -37,7 +37,7 @@
     <!-- header start -->
     <header id="header">
         <div class="headWrap">
-            <img src="./images/logo.png" alt="">
+            <a href="#"><img src="./images/logo.png" alt=""></a>
             <nav>
                 <ul class="clearfix">
                     <li><a href="#">재단소개</a></li>
@@ -309,7 +309,7 @@
     <footer id="footer">
         <div class="footerWrap">
             <div class="footer_logo">
-                <img src="images/logo_footer.png" alt="">
+                <a href="#"><img src="images/logo_footer.png" alt=""></a>
             </div>
             <p>
                 서울특별시 구로구 디지털로26길 38, G-Tower 넷마블
