--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -230,10 +230,10 @@
         <div class="section2Wrap">
             <div class="section2_title">
                 <h3>재단소식</h3>
-                <div class="tap">
-                    <button class="#">공지사항</button>
-                    <button class="#">뉴스룸</button>
-                    <button class="#">소셜미디어</button>
+                <div class="tap clearfix">
+                    <a href="#" class="active">공지사항</a>
+                    <a href="#">뉴스룸</a>
+                    <a href="#">소셜미디어</a>
                 </div>
             </div>
             <ul class="section_card">
