--- a/netmarble/index.html
+++ b/netmarble/index.html
@@ -231,9 +231,9 @@
             <div class="section2_title">
                 <h3>재단소식</h3>
                 <div class="tap clearfix">
-                    <a href="#" class="active">공지사항</a>
-                    <a href="#">뉴스룸</a>
-                    <a href="#">소셜미디어</a>
+                    <a href="javascript:void(0)" class="active">공지사항</a>
+                    <a href="javascript:void(0)">뉴스룸</a>
+                    <a href="javascript:void(0)">소셜미디어</a>
                 </div>
             </div>
             <ul class="section_card">
@@ -309,7 +309,7 @@
     <footer id="footer">
         <div class="footerWrap">
             <div class="footer_logo">
-                <a href="#"><img src="images/logo_footer.png" alt=""></a>
+                <a href="javascript:void(0)"><img src="images/logo_footer.png" alt=""></a>
             </div>
             <p>
                 서울특별시 구로구 디지털로26길 38, G-Tower 넷마블
